Item8640: Use css styles for indenting the dependency installs, also add a heading per dependency to the output.
git-svn-id: http://svn.foswiki.org/trunk@6996 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/styles.css
+++ b/core/lib/Foswiki/Configure/resources/styles.css
@@ -555,6 +555,9 @@ div.configureMessageBox {
 	margin:0;
 	padding-left:3em;
 }
+
+.installDependency { margin-left:3em; }
+
 .configureLegend table div.configureExpertExample {
 	border-left:5px solid #c3a13f;
 	padding-left:.5em;
