--- a/PatternSkin/pub/System/PatternSkinTheme/colors.css
+++ b/PatternSkin/pub/System/PatternSkinTheme/colors.css
@@ -214,9 +214,9 @@ select {
 .foswikiTable th {
    border-color:#e2e2e2;
 }
-.foswikiTable th,
 .foswikiTable th a:link,
-.foswikiTable th a:visited {
+.foswikiTable th a:visited,
+.foswikiTable th a font {
    color:#fff;
 }
 
@@ -292,6 +292,10 @@ table.foswikiFormTable {
 .foswikiAttachments td, 
 .foswikiAttachments th {
    border-color:#e2e2e2;
+}
+.foswikiAttachments .foswikiTable th font,
+table.foswikiFormTable th.foswikiFormTableHRow font {
+   color:#4571d0;
 }
 
 .foswikiFormSteps {
