--- a/core/templates/search.text.tmpl
+++ b/core/templates/search.text.tmpl
@@ -1,14 +1,9 @@
 %{ this is the template used when the format prameter is not set in SEARCH }%
 %TMPL:INCLUDE{"searchformat"}%
 
-%TMPL:DEF{SEARCH:header}%
-%MAKETEXT{"Topics in [_1] web:" args="<nop>%WEB%"}%
-
-
-%TMPL:END%
+%TMPL:DEF{SEARCH:header}%%MAKETEXT{"Results from [_1] web:" args="<nop>%WEB%"}%%TMPL:END%
 
 %TMPL:DEF{SEARCH:format}%
-
 %WEB%.%TOPICNAME%: %TIME% - %REVISION% %AUTHOR%
 
 %TEXTHEAD%
@@ -22,8 +17,4 @@
 Search: %SEARCHSTRING%
 %TMPL:END%
 
-%TMPL:DEF{SEARCH:count}%
-%MAKETEXT{"Number of topics:"}% <b>%NTOPICS%</b>
-%TMPL:END%
-
-
+%TMPL:DEF{SEARCH:count}%<div class="foswikiSearchResultCount">%MAKETEXT{"Number of topics: [_1]" args="<span>%NTOPICS%</span>"}%</div>%TMPL:END%
