--- a/PatternSkin/templates/search.pattern.tmpl
+++ b/PatternSkin/templates/search.pattern.tmpl
@@ -2,19 +2,16 @@
 %TMPL:INCLUDE{"searchformat"}%
 
 
-%TMPL:DEF{SEARCH:format}%<div class="patternSearchResult">
-<div class="foswikiTopRow">
-<div class="foswikiLeft"><a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a></div>
-<div class="foswikiRight foswikiSRAuthor"> %AUTHOR%</div>
-<div class="foswikiRight foswikiSRRev">%REVISION% - <a href="%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPICNAME%" rel='nofollow'>%TIME%</a>&nbsp;</div>
-<br class="foswikiClear" /></div><!--/foswikiTopRow-->
+%TMPL:DEF{SEARCH:format}%<div class="foswikiSearchResult"><div class="foswikiTopRow">
+<a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a>
+<div class="foswikiSummary">%TEXTHEAD%</div></div>
 <div class="foswikiBottomRow">
-<div class="foswikiSummary foswikiGrayText">%TEXTHEAD%</div><!--/foswikiSummary-->
-</div><!--/foswikiBottomRow-->
-</div><!--/patternSearchResult-->%TMPL:END%
+<span class="foswikiSRRev">%REVISION% - <a href="%SCRIPTURLPATH{"rdiff"}%/%WEB%/%TOPICNAME%" rel='nofollow'>%TIME%</a></span> <span class="foswikiSRAuthor">%MAKETEXT{"by [_1] " args="%AUTHOR%"}%</span>
+</div>
+</div>%TMPL:END%
 
 %TMPL:DEF{SEARCH:footer}%%TMPL:END%
 
 %TMPL:DEF{count_spacer}%%TMPL:END%
 
-%TMPL:DEF{"header:style:backgroundcolor"}%style="background-color:%WEBBGCOLOR%"%TMPL:END%
+%TMPL:DEF{"header:style:backgroundcolor"}% style="border-color:%WEBBGCOLOR%"%TMPL:END%
