Item8840: fix access key chars in IE7
git-svn-id: http://svn.foswiki.org/trunk@7103 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/PatternSkin/pub/System/PatternSkinTheme/colors.css
+++ b/PatternSkin/pub/System/PatternSkinTheme/colors.css
@@ -434,8 +434,8 @@ a:hover .foswikiAccessKey {
    color:#aaa;
 }
 .patternTopicAction .foswikiAccessKey {
-   color:#fff;
-   border-color:#fff;
+   color:#06c;
+   border-color:#06c;
 }
 .patternTopicAction a:hover .foswikiAccessKey {
    color:#06c;
