Item8895: ensure all calls to auto-compiled CGI functions have an initial hash parameter, to avoid slipping up on the CGI banana skin - it treats CGI as a first param as a 'special case'. A number of other attribute related minor refactorings included.
git-svn-id: http://svn.foswiki.org/trunk@7173 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/messages.tmpl
+++ b/core/templates/messages.tmpl
@@ -331,6 +331,9 @@
 "}%"}%
 
 %TMPL:END%
+
+%TMPL:DEF{"formdef_missing"}%%MAKETEXT{"Form definition '[_1]' not found" args="%PARAM1%"}%%TMPL:END%
+
 %TMPL:DEF{"no_form_def"}%
 ---+++ %MAKETEXT{"Form Definition [_1] missing" args="%PARAM1%.<nop>%PARAM2%"}%
 %MAKETEXT{"See [_1] for information about Form Definitions." args="%SYSTEMWEB%.DataForms"}%
