--- a/core/templates/search.text.tmpl
+++ b/core/templates/search.text.tmpl
@@ -1,4 +1,4 @@
-%{ this is the template used when the format prameter is not set in SEARCH }%
+%{ this is the template used when the format parameter is not set in SEARCH }%
 %TMPL:INCLUDE{"searchformat"}%
 
 %TMPL:DEF{SEARCH:header}%%MAKETEXT{"Results from [_1] web:" args="<nop>%WEB%"}%%TMPL:END%
