Item2456: sort the manifest, update the processing icons and add a little release text
git-svn-id: http://svn.foswiki.org/trunk@7277 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/FamFamFamContrib/templates/icons.tmpl
+++ b/FamFamFamContrib/templates/icons.tmpl
@@ -46,3 +46,6 @@
 %TMPL:DEF{"icon:toggleclose-mini"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/toggleclose-mini.png" width="7px" height="9px" alt="Close" /></span>%TMPL:END%
 %TMPL:DEF{"icon:web-bg-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/web-bg-small.png" width="13px" height="13px" alt="Web" /></span>%TMPL:END%
 
+%TMPL:DEF{"icon:processing-32-bg"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/processing-32-bg.gif" width="32px" height="32px" alt="processing" /></span>%TMPL:END%
+%TMPL:DEF{"icon:processing-32"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/processing-32.gif" width="32px" height="32px" alt="processing" /></span>%TMPL:END%
+
