Item8956:     * css fixes for simple BUTTON     * padding fixes to tags in textboxlist formfield     * remove type="text/javascrip" as per html5     * added initializer for jquery.wikiword     * fixed jquery.debug being used without firebug console     * fixed initialization of title/values in textboxlist formfield
git-svn-id: http://svn.foswiki.org/trunk@7282 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/jquery.button.uncompressed.css
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/button/jquery.button.uncompressed.css
@@ -52,7 +52,7 @@
   float:left;
   height:23px;
   line-height:23px;
-  padding:0px 8px;
+  padding:0px 5px 0px 8px;
   margin:0px 3px 0px 0px;
   font-size:13px;
   /* ie 6 */
@@ -61,6 +61,10 @@
 .jqButtonSimple span,
 .jqButton.simple span {
   padding:0px;
+}
+.jqButtonSimple span span,
+.jqButton.simple span span {
+  padding:0px 0px 0px 23px;
 }
 .jqButton .jqButtonIcon {
   background-position:0px 4px;
