Item8960: uninitialised var in UI::Changes - remove another remaining REPEAT split
git-svn-id: http://svn.foswiki.org/trunk@7292 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/changes.tmpl
+++ b/core/templates/changes.tmpl
@@ -6,9 +6,8 @@
 
 %TMPL:DEF{"topicactionbuttons"}% Subscribe or unsubscribe in %NOTIFYTOPIC% %TMPL:END%
 
-
-%TMPL:DEF{"searchbody"}%<br />%TMPL:P{"repeatedsearchblock"}%%TMPL:END%
-
-
-%TMPL:DEF{"content"}%%TMPL:P{"searchbody"}%
 %TMPL:P{"topicinfo"}%%TMPL:END%
+
+%TMPL:DEF{"CHANGES:header"}%%TMPL:DEF{"SEARCH:header"}%%TMPL:END%
+%TMPL:DEF{CHANGES:format}%%TMPL:DEF{"SEARCH:format"}%%TMPL:END%
+%TMPL:DEF{CHANGES:footer}%%TMPL:DEF{"SEARCH:footer"}%%TMPL:END%
