--- a/PatternSkin/templates/changes.pattern.tmpl
+++ b/PatternSkin/templates/changes.pattern.tmpl
@@ -8,4 +8,6 @@
 %TMPL:DEF{"topicinfo"}%%TMPL:END%
 
 
-%TMPL:DEF{"content"}%<div class="patternSearchResults">%TMPL:P{"header"}%%REPEAT%%TMPL:P{"result"}%%REPEAT%</div><!--/patternSearchResults-->%TMPL:END%
+%TMPL:DEF{"CHANGES:header"}%<div class="patternSearchResults">%TMPL:P{"header"}%%TMPL:END%
+%TMPL:DEF{CHANGES:format}%%TMPL:P{"result"}%%TMPL:END%
+%TMPL:DEF{CHANGES:footer}%</div><!--/patternSearchResults-->%TMPL:END%
