Item8937: ensure that the original path_info is used in the login form, and not the path_info after rewriting from the =topic= url param. The original path_info is required because the rest script abuses the path info as object/verb rather than web/topic. This might impact other places where a topic parameter is used to override the path_info.
git-svn-id: http://svn.foswiki.org/trunk@7325 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/login.tmpl
+++ b/core/templates/login.tmpl
@@ -29,7 +29,7 @@
 
 %TMPL:DEF{"authrealm"}%%AUTHREALM%%TMPL:END%
 
-%TMPL:DEF{"formstart"}%<form action='%SCRIPTURLPATH{"login"}%/%WEB%/%TOPIC%' name='loginform' method='post'>%TMPL:END%
+%TMPL:DEF{"formstart"}%<form action='%SCRIPTURLPATH{"login"}%%PATH_INFO%' name='loginform' method='post'>%TMPL:END%
 
 %TMPL:DEF{"formend"}%<literal>
 %QUERYPARAMS{encoding="entity" format="<input type='hidden' name='$name' value='$value' />"}%
