Item8976: non-formated SEARCH counter has no trailing newline
git-svn-id: http://svn.foswiki.org/trunk@7332 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/search.tmpl
+++ b/core/templates/search.tmpl
@@ -2,6 +2,10 @@
 %{ this is the template used when the format prameter is not set in SEARCH }%
 %TMPL:INCLUDE{"searchformat"}%
 
+%{ remove the extra linefeed that is needed when format="" is used }%
+%TMPL:DEF{SEARCH:count}%%TMPL:P{SEARCH:count_result}%%TMPL:END%
+
+
 %TMPL:DEF{SEARCH:format}%<div class="foswikiSearchResult"><div class="foswikiTopRow">
 <a href="%SCRIPTURLPATH{"view"}%/%WEB%/%TOPICNAME%"><b>%TOPICNAME%</b></a>
 <div class="foswikiSummary">%TEXTHEAD%</div></div>
