--- a/FamFamFamContrib/templates/icons.tmpl
+++ b/FamFamFamContrib/templates/icons.tmpl
@@ -8,44 +8,44 @@
 
 %TMPL:DEF{"iconurl:book"}%%PUBURL%/%SYSTEMWEB%/DocumentGraphics/book.png%TMPL:END%
 %TMPL:DEF{"iconalt:book"}%Book%TMPL:END%
-%TMPL:DEF{"icon:book"}%<span class="foswikiIcon"><img src="%TMPL:P{"iconurl:book"}%" width="16px" height="16px" alt="%TMPL:P{"iconalt:book"}%" /></span>%TMPL:END%
+%TMPL:DEF{"icon:book"}%<span class="foswikiIcon"><img src="%TMPL:P{"iconurl:book"}%" width="16" height="16" alt="%TMPL:P{"iconalt:book"}%" /></span>%TMPL:END%
 
 %{ special icons which make little sense to do as actual graphics }%
-%TMPL:DEF{"icon:blank"}%<span class="foswikiIcon"><div class="inner" style="width:14px;height:14px;border:1px solid gray;background:white;display:inline-block;"></div></span>%TMPL:END%
-%TMPL:DEF{"icon:blank-bg"}%<span class="foswikiIcon"><div class="inner" style="width:14px;height:14px;border:1px solid gray;background:transparent;display:inline-block"></div></span>%TMPL:END%
-%TMPL:DEF{"icon:empty"}%<span class="foswikiIcon"><div class="inner" style="width:14px;height:14px;border:0;background:transparent;display:inline-block;"></div></span>%TMPL:END%
+%TMPL:DEF{"icon:blank"}%<span class="foswikiIcon"><div class="inner" style="width:14;height:14;border:1 solid gray;background:white;display:inline-block;"></div></span>%TMPL:END%
+%TMPL:DEF{"icon:blank-bg"}%<span class="foswikiIcon"><div class="inner" style="width:14;height:14;border:1 solid gray;background:transparent;display:inline-block"></div></span>%TMPL:END%
+%TMPL:DEF{"icon:empty"}%<span class="foswikiIcon"><div class="inner" style="width:14;height:14;border:0;background:transparent;display:inline-block;"></div></span>%TMPL:END%
 
 
 
 %{ needs tweaking to get the 'm' and 'p' in the right place }%
-%TMPL:DEF{"icon:monospace"}%<span class="foswikiIcon"><div class="inner" style="width:14px;height:14px;border:1px solid gray;background:white;display:inline-block;font-family:monospace;">m</div></span>%TMPL:END%
-%TMPL:DEF{"icon:proportional"}%<span class="foswikiIcon"><div class="inner" style="width:14px;height:14px;border:1px solid gray;background:white;display:inline-block;font-family:serif;">p</div></span>%TMPL:END%
+%TMPL:DEF{"icon:monospace"}%<span class="foswikiIcon"><div class="inner" style="width:14;height:14;border:1 solid gray;background:white;display:inline-block;font-family:monospace;">m</div></span>%TMPL:END%
+%TMPL:DEF{"icon:proportional"}%<span class="foswikiIcon"><div class="inner" style="width:14;height:14;border:1 solid gray;background:white;display:inline-block;font-family:serif;">p</div></span>%TMPL:END%
 
 
-%{ non-16px sized icons }%
-%TMPL:DEF{"icon:more-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/more-small.png" width="13px" height="13px" alt="Read more" /></span>%TMPL:END%
-%TMPL:DEF{"icon:photo"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/photo.png" width="13px" height="10px" alt="Photo" /></span>%TMPL:END%
-%TMPL:DEF{"icon:video"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/video.png" width="13px" height="10px" alt="Video" /></span>%TMPL:END%
-%TMPL:DEF{"icon:search-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/search-small.png" width="13px" height="13px" alt="Search" /></span>%TMPL:END%
-%TMPL:DEF{"icon:uweb-bo12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/uweb-bo12.png" width="12px" height="12px" alt="Edit" /></span>%TMPL:END%
-%TMPL:DEF{"icon:uweb-m12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/uweb-m12.png" width="12px" height="12px" alt="Edit" /></span>%TMPL:END%
-%TMPL:DEF{"icon:uweb-o12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/uweb-o12.png" width="12px" height="12px" alt="Edit" /></span>%TMPL:END%
-%TMPL:DEF{"icon:changes-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/changes-small.png" width="13px" height="13px" alt="Changes" /></span>%TMPL:END%
-%TMPL:DEF{"icon:rss-feed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/rss-feed.png" width="36px" height="14px" alt="RSS feed" /></span>%TMPL:END%
-%TMPL:DEF{"icon:xml-feed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/xml-feed.png" width="36px" height="14px" alt="XML feed" /></span>%TMPL:END%
-%TMPL:DEF{"icon:new"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/new.png" width="30px" height="16px" alt="New" /></span>%TMPL:END%
-%TMPL:DEF{"icon:todo"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/todo.png" width="37px" height="16px" alt="TODO" /></span>%TMPL:END%
-%TMPL:DEF{"icon:updated"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/updated.png" width="55px" height="16px" alt="UPDATED" /></span>%TMPL:END%
-%TMPL:DEF{"icon:done"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/done.png" width="37px" height="16px" alt="Done" /></span>%TMPL:END%
-%TMPL:DEF{"icon:closed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/closed.png" width="48px" height="16px" alt="Closed" /></span>%TMPL:END%
-%TMPL:DEF{"icon:flag-gray-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/flag-gray-small.png" width="13px" height="13px" alt="Flag" /></span>%TMPL:END%
-%TMPL:DEF{"icon:tablesortdiamond"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/tablesortdiamond.png" width="11px" height="13px" alt="Sort table" /></span>%TMPL:END%
-%TMPL:DEF{"icon:tablesortdown"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/tablesortdown.png" width="11px" height="13px" alt="Sort table descending" /></span>%TMPL:END%
-%TMPL:DEF{"icon:tablesortup"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/tablesortup.png" width="11px" height="13px" alt="Sort table ascending" /></span>%TMPL:END%
-%TMPL:DEF{"icon:toggleopen-mini"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/toggleopen-mini.png" width="7px" height="9px" alt="Open" /></span>%TMPL:END%
-%TMPL:DEF{"icon:toggleclose-mini"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/toggleclose-mini.png" width="7px" height="9px" alt="Close" /></span>%TMPL:END%
-%TMPL:DEF{"icon:web-bg-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/web-bg-small.png" width="13px" height="13px" alt="Web" /></span>%TMPL:END%
+%{ non-16 sized icons }%
+%TMPL:DEF{"icon:more-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/more-small.png" width="13" height="13" alt="Read more" /></span>%TMPL:END%
+%TMPL:DEF{"icon:photo"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/photo.png" width="13" height="10" alt="Photo" /></span>%TMPL:END%
+%TMPL:DEF{"icon:video"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/video.png" width="13" height="10" alt="Video" /></span>%TMPL:END%
+%TMPL:DEF{"icon:search-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/search-small.png" width="13" height="13" alt="Search" /></span>%TMPL:END%
+%TMPL:DEF{"icon:uweb-bo12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/uweb-bo12.png" width="12" height="12" alt="Edit" /></span>%TMPL:END%
+%TMPL:DEF{"icon:uweb-m12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/uweb-m12.png" width="12" height="12" alt="Edit" /></span>%TMPL:END%
+%TMPL:DEF{"icon:uweb-o12"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/uweb-o12.png" width="12" height="12" alt="Edit" /></span>%TMPL:END%
+%TMPL:DEF{"icon:changes-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/changes-small.png" width="13" height="13" alt="Changes" /></span>%TMPL:END%
+%TMPL:DEF{"icon:rss-feed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/rss-feed.png" width="36" height="14" alt="RSS feed" /></span>%TMPL:END%
+%TMPL:DEF{"icon:xml-feed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/xml-feed.png" width="36" height="14" alt="XML feed" /></span>%TMPL:END%
+%TMPL:DEF{"icon:new"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/new.png" width="30" height="16" alt="New" /></span>%TMPL:END%
+%TMPL:DEF{"icon:todo"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/todo.png" width="37" height="16" alt="TODO" /></span>%TMPL:END%
+%TMPL:DEF{"icon:updated"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/updated.png" width="55" height="16" alt="UPDATED" /></span>%TMPL:END%
+%TMPL:DEF{"icon:done"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/done.png" width="37" height="16" alt="Done" /></span>%TMPL:END%
+%TMPL:DEF{"icon:closed"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/closed.png" width="48" height="16" alt="Closed" /></span>%TMPL:END%
+%TMPL:DEF{"icon:flag-gray-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/flag-gray-small.png" width="13" height="13" alt="Flag" /></span>%TMPL:END%
+%TMPL:DEF{"icon:tablesortdiamond"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/tablesortdiamond.png" width="11" height="13" alt="Sort table" /></span>%TMPL:END%
+%TMPL:DEF{"icon:tablesortdown"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/tablesortdown.png" width="11" height="13" alt="Sort table descending" /></span>%TMPL:END%
+%TMPL:DEF{"icon:tablesortup"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/tablesortup.png" width="11" height="13" alt="Sort table ascending" /></span>%TMPL:END%
+%TMPL:DEF{"icon:toggleopen-mini"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/toggleopen-mini.png" width="7" height="9" alt="Open" /></span>%TMPL:END%
+%TMPL:DEF{"icon:toggleclose-mini"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/toggleclose-mini.png" width="7" height="9" alt="Close" /></span>%TMPL:END%
+%TMPL:DEF{"icon:web-bg-small"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/web-bg-small.png" width="13" height="13" alt="Web" /></span>%TMPL:END%
 
-%TMPL:DEF{"icon:processing-32-bg"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/processing-32-bg.gif" width="32px" height="32px" alt="processing" /></span>%TMPL:END%
-%TMPL:DEF{"icon:processing-32"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/processing-32.gif" width="32px" height="32px" alt="processing" /></span>%TMPL:END%
+%TMPL:DEF{"icon:processing-32-bg"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/processing-32-bg.gif" width="32" height="32" alt="processing" /></span>%TMPL:END%
+%TMPL:DEF{"icon:processing-32"}%<span class="foswikiIcon"><img src="%PUBURL%/%SYSTEMWEB%/DocumentGraphics/processing-32.gif" width="32" height="32" alt="processing" /></span>%TMPL:END%
 
