Item8846: correct foswiki.tmpl so that we don't add p's at end and thus un-necessarily fail to validate
git-svn-id: http://svn.foswiki.org/trunk@7368 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/templates/foswiki.tmpl
+++ b/core/templates/foswiki.tmpl
@@ -113,7 +113,7 @@
 %TMPL:DEF{"templatestyle"}%%TMPL:END%
 
 %{ title string in page: }%%TMPL:DEF{"pagetitle"}%%TMPL:P{"webaction"}%%TMPL:END%
-%TMPL:DEF{"pagetitlestylewrapper"}%<h1>%TMPL:P{"pagetitle"}%</h1>%TMPL:END%%TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%
+%TMPL:DEF{"pagetitlestylewrapper"}%<h1>%TMPL:P{"pagetitle"}%</h1>%TMPL:END%
 
 %{ formatting macros }%
 %{ webListIndent - used in WEBLIST }%
@@ -128,3 +128,13 @@
   then="$percntWEBTOPICLIST$percnt" 
   else="$percntTMPL:P{\"defaultwebtopiclist\"}$percnt"
 }%%TMPL:END%
+
+%{ the bit that controls the output _MUST_ be last in the foswiki.SKIN.tmpl file. }%
+%TMPL:P{"htmldoctype"}%%TMPL:P{"head"}%%TMPL:P{"bodystart"}%%TMPL:P{"main"}%%TMPL:P{"bodyend"}%%TMPL:EOF%
+
+
+
+
+
+
+
